kubernetes/eks/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: netflix-frontend-svc
  namespace: netflix-clone
spec:
  type: ClusterIP
  selector:
    app: netflix-frontend
  ports:
    - port: 80
      targetPort: 8080
